# frame_tracker

./: CMakeLists.txt  README.md  package.xml
config/: frame_tracker.yaml
include/cob_frame_tracker/: cob_frame_tracker.h
include/frame_tracker/: frame_tracker.h  interactive_marker.h
launch/: frame_tracker.launch  full_simulation.launch  sim.launch
scripts/: plot_control_trajectory.py
src/: cob_frame_tracker.cpp  frame_tracker.cpp  frame_tracker_node.cpp  interactive_marker.cpp  interactive_marker_node.cpp  kinematic_calculations.cpp
