<?xml version="1.0"?>
<package format="2">
  <name>frame_tracker</name>
  <version>0.0.0</version>
  <description>The frame_tracker package</description>
  
  <maintainer email="bfb-mp@ipa.fraunhofer.de">Mayank Patel</maintainer>
  <license>IPA</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslint</build_depend>

  <depend>boost</depend>
  <depend>cmake_modules</depend>
  <depend>eigen_conversions</depend>
  <!--depend>eigen</depend-->
  <depend>geometry_msgs</depend>
  <depend>kdl_conversions</depend>
  <depend>kdl_parser</depend>
  <depend>nav_msgs</depend>
  <depend>orocos_kdl</depend>
  <depend>pluginlib</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf</depend>
  <depend>tf_conversions</depend>
  <depend>trajectory_msgs</depend>
  <depend>urdf</depend>
  <depend>visualization_msgs</depend>
  <depend>interactive_markers</depend>
  
</package>