<?xml version="1.0"?>
<package format="2">
  <name>frame_tracker</name>
  <version>0.0.0</version>
  <description>The frame_tracker package</description>
  
  <maintainer email="bfb-mp@ipa.fraunhofer.de">Mayank Patel</maintainer>
  <license>IPA</license>

  <license>LGPL</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <depend>actionlib_msgs</depend>
  <depend>actionlib</depend>
  <depend>boost</depend>
  <depend>cob_srvs</depend>
  <depend>control_toolbox</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>geometry_msgs</depend>
  <depend>interactive_markers</depend>
  <depend>kdl_conversions</depend>
  <depend>kdl_parser</depend>
  <depend>orocos_kdl</depend>
  <depend>roscpp</depend>
  <depend>roslint</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>tf</depend>
  <depend>visualization_msgs</depend>

  <exec_depend>rospy</exec_depend>

</package>